--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dateformat": "^2.0.0",
     "express": "^4.15.2",
     "express-fileupload": "^0.1.2",
+    "express-session": "^1.15.2",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
